// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location (error) 1`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    HELLO
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location (error) 2`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    PRELOADER
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location (error) 3`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    HELLO
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location 1`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    HELLO
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location 2`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    PRELOADER
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> re-fetches content on new location 3`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    NEXT HELLO
  </div>
</DocumentFragment>
`;

exports[`rex-widget <DynamicPageContent /> renders 1`] = `
<DocumentFragment>
  <div
    class="[object Object] [object Object] [object Object]"
    style="flex-grow: 1; flex-shrink: 1;"
  >
    HELLO
  </div>
</DocumentFragment>
`;
